# crucible

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
blog/: 2026-05-23-agents-need-sandboxes-not-just-tools.md  README.md
designs/: runtime-loop.md
docs/: demo-script.md  thesis.md
examples/: policy.yaml  trace.json
notes/: provenance.md
src/crucible/: cli.py
workspace/: plan.md
