[project]
name = "crucible-agent"
version = "0.1.0"
description = "A tiny sandbox runtime for reviewable agent actions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0"
]

[project.scripts]
crucible = "crucible.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
